# product-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ably_crawler.py  api-examples.md  db.py  example-response.json  fetch_reviews.py  fly.toml  image_batch_classifier.py  image_classifier.py  image_splitter.py  index.html  main.py  main_api.py  main_playwright.py  pyproject.toml  server.py  sinsang_product_names.py  sinsangmarket-api.md  web_api.py
templates/: history.html  index.html
